# wonderful

./: Cargo.toml
src/: configuration.rs  error.rs  main.rs
src/bot/: event.rs  mod.rs
src/bot/command/: mod.rs  set.rs
src/bot/commands/: common.rs  mod.rs
src/configuration/: mod.rs
src/shard/: event.rs  mod.rs  plug.rs  util.rs
src/shard/command/: mod.rs
src/shard/commands/: mod.rs
src/shard/plugs/: comfort.rs  core.rs  mod.rs  utility.rs
src/shard/plugs/administration/: log.rs  mod.rs
src/shard/plugs/configuration/: mod.rs  module.rs  setting.rs
src/store/: mod.rs
src/store/migration/: 1.sql  mod.rs
